<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>descartes</name>
  <version>2.5.3</version>
  <description>Descartes is a ROS-Industrial project for performing path-planning on under-defined Cartesian trajectories. More details regarding motivation can be found in <a class="https" href="https://github.com/ros-industrial/rep/blob/master/rep-I0003.rst">rep-I0003.rst</a>.</description>

  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>
  <license>Apache2.0</license>
  <url type="website">http://wiki.ros.org/descartes_moveit</url>
  <author email="ratneshmadaan@gmail.com">Ratnesh Madaan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>descartes_core</exec_depend>
  <exec_depend>descartes_moveit</exec_depend>
  <exec_depend>descartes_planner</exec_depend>
  <exec_depend>descartes_trajectory</exec_depend>
  <exec_depend>descartes_utilities</exec_depend>
  <!-- <run_depend>descartes_test</run_depend> -->
  <export>
    <metapackage/>
    <build_type>ament_cmake</build_type> 
  </export>
</package>
